# itbooks

./: .gitignore  .prettierrc.js  LICENSE  README.md  app.json  babel.config.js  index.ts  index.tsx  metro.config.js  package.json  react-native.config.js  tsconfig.json  tslint.json
__tests__/: components-test.tsx  redux-actions-test.ts  redux-epics-test.ts  redux-selectors-test.ts
android/: settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/itbooks/: ItBooksJSIInstaller.java  MainActivity.java  MainApplication.java  ScrapperModule.java  ScrapperPackage.java
android/app/src/main/res/values/: strings.xml
android/goScrapper/: build.gradle
android/goScrapper-sources/: build.gradle
c++/: ItBooksJSIInstaller.cpp  ItBooksJSIInstaller.h
ios/: Podfile
ios/GoScrapper.framework/: GoScrapper
ios/itbooks/: AppDelegate.m  Info.plist  Scrapper.h  Scrapper.m
ios/itbooks.xcodeproj/: project.pbxproj
ios/itbooks.xcodeproj/xcshareddata/xcschemes/: itbooks.xcscheme  (+1 more)
ios/itbooks.xcworkspace/: contents.xcworkspacedata
ios/itbooks/Base.lproj/: LaunchScreen.xib
ios/itbooksTests/: itbooksTests.m
src/: App.tsx  global.d.ts  index.tsx
src/components/: BottomSheet.tsx  DebouncedInput.tsx  Divider.tsx  FastImage.tsx  Header.tsx  Icon.tsx  OptionListItem.tsx  index.ts
src/components/animated/: AnimatedList.tsx  AnimatedPressed.tsx  AnimatedTouchableIcon.tsx  AnimatedView.tsx  helpers.tsx  index.ts
src/hooks/: use-force-render.ts  use-redux.ts  use-why-didi-you-update.ts
src/interfaces/: book.interface.ts
src/redux/: store.ts  types.d.ts
src/redux/actions/: books.actions.ts  index.ts
src/redux/epics/: books.epic.ts  index.ts
src/redux/reducers/: books.reducer.ts  index.ts
src/redux/selectors/: books.selector.ts  index.ts
src/redux/services/: index.ts  types.d.ts
src/screens/: BookDetails.tsx  Downloaded.tsx  Filters.tsx  Home.tsx  Options.tsx
src/utils/: downloadBook.ts  getIcon.ts
(+4 files in other folders)
